// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubStats component Should render the GithubStats component 1`] = `
<DocumentFragment>
  <div
    class="c-section__entry c-section__entry--no-background"
  >
    <div
      class="o-shell"
    >
      <h2>
        Github profile statistics
      </h2>
      <ul
        class="c-section__list"
      >
        <li>
          <span>
            Used languages:
          </span>
          <strong>
            JavaScript, TypeScript
          </strong>
        </li>
        <li>
          <span>
            Followers:
          </span>
          <strong>
            50
          </strong>
        </li>
        <li>
          <span>
            Following:
          </span>
          <strong>
            154
          </strong>
        </li>
        <li>
          <span>
            Joined date:
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li>
          <span>
            Updated at:
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li>
          <span>
            Last active:
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li>
          <span>
            Total repositories:
          </span>
          <strong>
            2
          </strong>
        </li>
        <li>
          <span>
            Private repositories:
          </span>
          <strong>
            5
          </strong>
        </li>
        <li>
          <span>
            Public repositories:
          </span>
          <strong>
            47
          </strong>
        </li>
        <li>
          <span>
            Organizations repositories:
          </span>
          <strong>
            -50
          </strong>
        </li>
        <li>
          <span>
            Total gists:
          </span>
          <strong>
            28
          </strong>
        </li>
        <li>
          <span>
            Private gists:
          </span>
          <strong>
            8
          </strong>
        </li>
        <li>
          <span>
            Public gists:
          </span>
          <strong>
            20
          </strong>
        </li>
        <li>
          <span>
            Total contributions:
          </span>
          <strong>
            301
          </strong>
        </li>
        <li>
          <span>
            Total stars:
          </span>
          <strong>
            4
          </strong>
        </li>
        <li>
          <span>
            Total issues:
          </span>
          <strong>
            3
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c-section__entry"
  >
    <small
      class="c-section__stamp"
    >
      Last updated: Mock date
    </small>
    <div
      class="o-shell"
    >
      <h2>
        Github contributions calendar
      </h2>
      <div
        class="c-calendar__outer"
      >
        <div
          class="c-calendar c-calendar--github"
        >
          <div>
            Mocked Github Calendar
          </div>
        </div>
      </div>
      <div
        class="c-skyline"
      >
        <nav
          class="c-skyline__nav"
        >
          <h3>
            Previous years Github contributions 
            <br />
            <small>
              (requires WebGL)
            </small>
          </h3>
          <ul>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2013
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2014
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2015
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2016
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2017
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2018
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2019
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2020
              </button>
            </li>
            <li>
              <button
                class="c-btn c-btn--small"
              >
                2021
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitlabStats component Should render the GitlabStats component 1`] = `
<DocumentFragment>
  <div
    class="c-section__entry c-section__entry--no-background"
  >
    <div
      class="o-shell"
    >
      <h2>
        Gitlab profile statistics
      </h2>
      <ul
        class="c-section__list"
      >
        <li>
          <span>
            Used languages:
          </span>
          <strong>
            JavaScript, HTML, CSS, PHP, Shell
          </strong>
        </li>
        <li>
          <span>
            Joined date:
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li>
          <span>
            Last active:
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li>
          <span>
            Last year contributions:
          </span>
          <strong>
            105
          </strong>
        </li>
        <li>
          <span>
            Total repositories:
          </span>
          <strong>
            1
          </strong>
        </li>
        <li>
          <span>
            Public repositories:
          </span>
          <strong>
            0
          </strong>
        </li>
        <li>
          <span>
            Private repositories:
          </span>
          <strong>
            1
          </strong>
        </li>
        <li>
          <span>
            Personal repositories:
          </span>
          <strong>
            0
          </strong>
        </li>
        <li>
          <span>
            Organizations repositories:
          </span>
          <strong>
            1
          </strong>
        </li>
        <li>
          <span>
            Total stars:
          </span>
          <strong>
            0
          </strong>
        </li>
        <li>
          <span>
            Total issues:
          </span>
          <strong>
            0
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c-section__entry"
  >
    <small
      class="c-section__stamp"
    >
      Last updated: Mock date
    </small>
    <div
      class="o-shell"
    >
      <h2>
        Gitlab contributions calendars
      </h2>
      <div
        class="c-calendar__outer"
      >
        <div
          class="c-calendar c-calendar--gitlab"
        >
          <div
            class="c-calendar__entry"
          >
            <h3>
              Public Gitlab profile
            </h3>
            <div />
          </div>
          <div
            class="c-calendar__entry"
          >
            <h3>
              Private Gitlab profile
            </h3>
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionStats component Should render the SectionStats component 1`] = `
<DocumentFragment>
  <main
    class="o-main "
  >
    <section
      class="c-section c-section--stats circles"
      id="stats"
    >
      <header
        class="c-section__head"
      >
        <div
          class="o-shell"
        >
          <h1>
            Stats
          </h1>
        </div>
      </header>
      <div
        class="c-section__entry c-section__entry--no-background"
      >
        <div
          class="o-shell"
        >
          <h2>
            Github profile statistics
          </h2>
          <ul
            class="c-section__list"
          >
            <li>
              <span>
                Used languages:
              </span>
              <strong>
                JavaScript, TypeScript
              </strong>
            </li>
            <li>
              <span>
                Followers:
              </span>
              <strong>
                50
              </strong>
            </li>
            <li>
              <span>
                Following:
              </span>
              <strong>
                154
              </strong>
            </li>
            <li>
              <span>
                Joined date:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Updated at:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last active:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Total repositories:
              </span>
              <strong>
                2
              </strong>
            </li>
            <li>
              <span>
                Private repositories:
              </span>
              <strong>
                5
              </strong>
            </li>
            <li>
              <span>
                Public repositories:
              </span>
              <strong>
                47
              </strong>
            </li>
            <li>
              <span>
                Organizations repositories:
              </span>
              <strong>
                -50
              </strong>
            </li>
            <li>
              <span>
                Total gists:
              </span>
              <strong>
                28
              </strong>
            </li>
            <li>
              <span>
                Private gists:
              </span>
              <strong>
                8
              </strong>
            </li>
            <li>
              <span>
                Public gists:
              </span>
              <strong>
                20
              </strong>
            </li>
            <li>
              <span>
                Total contributions:
              </span>
              <strong>
                301
              </strong>
            </li>
            <li>
              <span>
                Total stars:
              </span>
              <strong>
                4
              </strong>
            </li>
            <li>
              <span>
                Total issues:
              </span>
              <strong>
                3
              </strong>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c-section__entry"
      >
        <small
          class="c-section__stamp"
        >
          Last updated: Mock date
        </small>
        <div
          class="o-shell"
        >
          <h2>
            Github contributions calendar
          </h2>
          <div
            class="c-calendar__outer"
          >
            <div
              class="c-calendar c-calendar--github"
            >
              <div>
                Mocked Github Calendar
              </div>
            </div>
          </div>
          <div
            class="c-skyline"
          >
            <nav
              class="c-skyline__nav"
            >
              <h3>
                Previous years Github contributions 
                <br />
                <small>
                  (requires WebGL)
                </small>
              </h3>
              <ul>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2013
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2014
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2015
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2016
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2017
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2018
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2019
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2020
                  </button>
                </li>
                <li>
                  <button
                    class="c-btn c-btn--small"
                  >
                    2021
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        class="c-section__entry c-section__entry--no-background"
      >
        <div
          class="o-shell"
        >
          <h2>
            Gitlab profile statistics
          </h2>
          <ul
            class="c-section__list"
          >
            <li>
              <span>
                Used languages:
              </span>
              <strong>
                JavaScript, HTML, CSS, PHP, Shell
              </strong>
            </li>
            <li>
              <span>
                Joined date:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last active:
              </span>
              <strong>
                Mock date
              </strong>
            </li>
            <li>
              <span>
                Last year contributions:
              </span>
              <strong>
                105
              </strong>
            </li>
            <li>
              <span>
                Total repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Public repositories:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Private repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Personal repositories:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Organizations repositories:
              </span>
              <strong>
                1
              </strong>
            </li>
            <li>
              <span>
                Total stars:
              </span>
              <strong>
                0
              </strong>
            </li>
            <li>
              <span>
                Total issues:
              </span>
              <strong>
                0
              </strong>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c-section__entry"
      >
        <small
          class="c-section__stamp"
        >
          Last updated: Mock date
        </small>
        <div
          class="o-shell"
        >
          <h2>
            Gitlab contributions calendars
          </h2>
          <div
            class="c-calendar__outer"
          >
            <div
              class="c-calendar c-calendar--gitlab"
            >
              <div
                class="c-calendar__entry"
              >
                <h3>
                  Public Gitlab profile
                </h3>
                <div />
              </div>
              <div
                class="c-calendar__entry"
              >
                <h3>
                  Private Gitlab profile
                </h3>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn "
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn "
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
            </a>
          </li>
        </ul>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
